Fixed buy now button not showing

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ Label {
     font-weight: bolder;
 }
 
-#buynow {
-    background-color:bisque;
+#BuyNow {
+    background-color:rgb(214, 240, 144);
     font-size: large;
     font-weight: bolder;
 }
